<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#343434"
        android:text="Auto"
        android:paddingStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_auto_copy_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_auto_copy"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_auto_make_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_auto_make_call"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_auto_access_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_auto_access_to_url"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#343434"
        android:text="Storage"
        android:paddingStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_save_image_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_save_image_code"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#343434"
        android:text="Others"
        android:paddingStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_enable_sound"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/label_checkbox_enable_vibrate"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="15dp"
        android:padding="8dp"/>

</LinearLayout>